javascript - 105. Variables con let y const

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <button type="button" id="boton">Ver Notificación</button>
     </div>
     <!-- <script src="js/script.js"> </script> -->
-    <script src="js/01.js"></script>
-    
+    <!-- <script src="js/01.js"></script> -->
+    <!-- <script src="js/02.js"></script> -->
+    <script src="js/03.js"></script>
+
 
 </body>
 </html>
