--- a/index.html
+++ b/index.html
@@ -26,7 +26,30 @@
     <!-- <script src="js/05.js"></script> -->
     <!-- <script src="js/06.js"></script> -->
     <!-- <script src="js/07.js"></script> -->
-    <script src="js/08.js"></script>
-    
+    <!-- <script src="js/08.js"></script> -->
+     <script src="js/09.js"></script>
+    <!-- <script src="js/10.js"></script> -->
+    <!-- <script src="js/11.js"></script> -->
+    <!-- <script src="js/12.js"></script> -->
+    <!-- <script src="js/13.js"></script> -->
+    <!-- <script src="js/14.js"></script> -->
+    <!-- <script src="js/15.js"></script> -->
+    <!-- <script src="js/16.js"></script> -->
+    <!-- <script src="js/17.js"></script> -->
+    <!-- <script src="js/18.js"></script> -->
+    <!-- <script src="js/19.js"></script> -->
+    <!-- <script src="js/20.js"></script> -->
+    <!-- <script src="js/21.js"></script> -->
+    <!-- <script src="js/22.js"></script> -->
+    <!-- <script src="js/23.js"></script> -->
+    <!-- <script src="js/24.js"></script> -->
+    <!-- <script src="js/25.js"></script> -->
+    <!-- <script src="js/26.js"></script> -->
+    <!-- <script src="js/27.js"></script> -->
+    <!-- <script src="js/28.js"></script> -->
+    <!-- <script src="js/29.js"></script> -->
+    <!-- <script src="js/30.js"></script> -->
+    <!-- <script src="js/31.js"></script> -->
+    <!-- <script src="js/32.js"></script> -->
 </body>
 </html>
