javascript - extras de como crear archivos con python

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="contenido">
         <h1>Desarrollo Web Completo</h1>
-        <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
+        <a href="http://www.github.com/vetdy03" target="_blank">codigo con vetdy03</a>
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
 
@@ -29,8 +29,8 @@
     <!-- <script src="js/08.js"></script> -->
      <!-- <script src="js/09.js"></script> -->
     <!-- <script src="js/10.js"></script> -->
-    <script src="js/11.js"></script>
-    <!-- <script src="js/12.js"></script> -->
+    <!-- <script src="js/11.js"></script> -->
+    <script src="js/12.js"></script>
     <!-- <script src="js/13.js"></script> -->
     <!-- <script src="js/14.js"></script> -->
     <!-- <script src="js/15.js"></script> -->
