--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
 
-        <button type="button" id="boton">Ver Notificación</button>
+        <button type="button" id="botonParaVerNotifcacion">Ver Notificación</button>
     </div>
     <!-- <script src="js/script.js"> </script> -->
     <!-- <script src="js/01.js"></script> -->
@@ -48,8 +48,8 @@
     <!-- <script src="js/27.js"></script> -->
     <!-- <script src="js/28.js"></script> -->
     <!-- <script src="js/29.js"></script> -->
-    <script src="js/30.js"></script>
-    <!-- <script src="js/31.js"></script> -->
+    <!-- <script src="js/30.js"></script> -->
+    <script src="js/31.js"></script>
     <!-- <script src="js/32.js"></script> -->
 </body>
 </html>
