149. Eventos con el Teclado

--- a/docsGuia/JavaScript_DOM_Eventos_inicio/JavaScript_DOM_Eventos_inicio/contacto.html
+++ b/docsGuia/JavaScript_DOM_Eventos_inicio/JavaScript_DOM_Eventos_inicio/contacto.html
@@ -45,6 +45,7 @@
                     type="text" 
                     placeholder="Tu Nombre" 
                     id="nombre"
+                    value="Hola mundo"
                 >
             </div>
             <div class="campo">
